--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -43,7 +43,8 @@ RUN dnf install -y \
     chmod a+rwx -R /etc/openldap && \
     mkdir -p /var/run/openldap && \
     chmod a+rwx -R /var/run/openldap && \
-    chmod -R a+rw /opt/openshift
+    chmod -R a+rw /opt/openshift && \
+    chmod -R 765 /usr/sbin/slapd
 
 # Set OpenLDAP data and config directories in a data volume
 VOLUME ["/var/lib/ldap", "/etc/openldap"]
